--- a/repetitive-experiment-realization/readme
+++ b/repetitive-experiment-realization/readme
@@ -1,1 +1,11 @@
-This folder is for the implimentation of repetitive experiment, which allows suffcient data for machine learning algorithm
+This repository is for the implimentation of repetitive experiment, which allows suffcient data for machine learning algorithm
+This is some codes and files of IV Cannulation Needle Sensor Project.
+
+This repository including:
+
+Controling the robotic arm with Arduino and CNC shield.  
+Impelement of Moku:Go Functions (Frequency Response Analyzer, Ocsolliscope) via Python API for signal excitations and recordings.  
+Example of combine robot motion and Moku:Go command into full experimental operation sequence.  
+Neural Networks Models training and testing, Reduced Order Modeling Method.  
+
+Credits for Yuqi Xiong, Dr. William Clark, Phoebe Esser Katz, Dr. Nikhil Bajaj, Department of ME & MS, Swanson School of Engineering, Univ. of Pittsburgh
