Update README with folder description and experiment notes

--- a/MachineLearning-Result/README
+++ b/MachineLearning-Result/README
@@ -1,1 +1,2 @@
-
+This folder is about Machine Learning Results include comfusion matrix and other figures
+Note: Experiment A is the experiment with material oil/oil oil/water oil/vinegar, Experiment B is the experiment with human skin-like silicone materials
