Update README with library and experiment details
Added details about custom library and experiments.

--- a/MachineLearning-Result/README
+++ b/MachineLearning-Result/README
@@ -1,2 +1,5 @@
 This folder is about Machine Learning Results include comfusion matrix and other figures
+
+as well as My Machine Learning and Reduced-Order modeling custom Library  
+
 Note: Experiment A is the experiment with material oil/oil oil/water oil/vinegar, Experiment B is the experiment with human skin-like silicone materials
